# MT-Embedded-Systems

./: .gitignore
Assignments/Assignment 1/: CMakeLists.txt
Assignments/Assignment 1/.metadata/: version.ini
Assignments/Assignment 1/Problem1/: .cproject
Assignments/Assignment 1/Problem1/src/: Problem1.c
Assignments/Assignment 1/Problem10/src/: Problem10.c
Assignments/Assignment 1/Problem11/src/: Problem11.c
Assignments/Assignment 1/Problem12/src/: Problem12.c
Assignments/Assignment 1/Problem13/src/: Problem13.c
Assignments/Assignment 1/Problem14/src/: Problem14.c
Assignments/Assignment 1/Problem15/src/: Problem15.c
Assignments/Assignment 1/Problem16/src/: Problem16.c
Assignments/Assignment 1/Problem17/: .cproject
Assignments/Assignment 1/Problem17/src/: Problem17.c
Assignments/Assignment 1/Problem18/: .cproject
Assignments/Assignment 1/Problem19/src/: Problem19.c
Assignments/Assignment 1/Problem2/src/: Problem2.c
Assignments/Assignment 1/Problem20/: .cproject
Assignments/Assignment 1/Problem20/src/: Problem20.c
Assignments/Assignment 1/Problem21/: .cproject
Assignments/Assignment 1/Problem21/src/: Problem21.c
Assignments/Assignment 1/Problem3/src/: Problem3.c
Assignments/Assignment 1/Problem4/: .cproject
Assignments/Assignment 1/Problem4/src/: Problem4.c
Assignments/Assignment 1/Problem5/: .cproject
Assignments/Assignment 1/Problem5/src/: Problem5.c
Assignments/Assignment 1/Problem6/src/: Problem6.c
Assignments/Assignment 1/Problem7/: .cproject
Assignments/Assignment 1/Problem9/: .cproject
Assignments/Assignment 2/: CMakeLists.txt
Assignments/Assignment 2/Problem10/: .cproject
Assignments/Assignment 2/Problem12/: .cproject
Assignments/Assignment 2/Problem13/: .cproject
Assignments/Assignment 2/Problem15/: .cproject
Assignments/Assignment 2/Problem16/: .cproject
Assignments/Assignment 2/Problem19/: .cproject
Assignments/Assignment 2/Problem3/: .cproject
Drivers/: README.md
(+310 files in other folders)
