cmake_minimum_required(VERSION 3.22)
project(Assignment_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment_1
        .metadata/.plugins/org.eclipse.cdt.make.core/specs.c
        .metadata/.plugins/org.eclipse.cdt.make.core/specs.cpp
        .metadata/.plugins/org.eclipse.cdt.managedbuilder.core/spec.c
        .metadata/.plugins/org.eclipse.cdt.managedbuilder.core/spec.cpp
#        Problem1/src/Problem1.c
        Problem2/src/Problem2.c
#        Problem3/src/Problem3.c
#        Problem4/src/Problem4.c
#        Problem5/src/Problem5.c
#        Problem6/src/Problem6.c
#        Problem7/src/Problem7.c
#        Problem8/src/Problem8.c
#        Problem9/src/Problem9.c
#        Problem10/src/Problem10.c
#        Problem11/src/Problem11.c
#        Problem12/src/Problem12.c
#        Problem13/src/Problem13.c
#        Problem14/src/Problem14.c
#        Problem15/src/Problem15.c
#        Problem16/src/Problem16.c
#        Problem17/src/Problem17.c
#         Problem18/src/Problem18.c
#        Problem19/src/Problem19.c
#        Problem20/src/Problem20.c
        )
